@@ -524,6 +524,64 @@ let rec transl env e =
           tag_int (Cop(Cload (Word_int, Mutable),
             [field_address (transl env b) dim_ofs dbg],
             dbg)) dbg
+      | (Pintcomp _ as comp,
+         [Uprim(Pccall { prim_name = "caml_int_compare"; _ },
+                [arg1; arg2],
+                _);
+          Uconst(Uconst_int 0)]) ->
+          transl env (Uprim (comp, [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uprim(Pccall { prim_name = ("caml_int32_compare"
+                                     | "caml_int32_compare_unboxed"); _ },
+                [arg1; arg2],
+                _);
+          Uconst(Uconst_int 0)]) ->
+          transl env (Uprim (Pbintcomp (Pint32, comp), [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uprim(Pccall { prim_name = ("caml_int64_compare"
+                                     | "caml_int64_compare_unboxed"); _ },
+                [arg1; arg2],
+                _);
+          Uconst(Uconst_int 0)]) ->
+          transl env (Uprim (Pbintcomp (Pint64, comp), [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uprim(Pccall { prim_name = ("caml_nativeint_compare"
+                                     | "caml_nativeint_compare_unboxed"); _ },
+                [arg1; arg2],
+                _);
+          Uconst(Uconst_int 0)]) ->
+          transl env (Uprim (Pbintcomp (Pnativeint, comp), [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uconst(Uconst_int 0);
+          Uprim(Pccall { prim_name = "caml_int_compare"; _ },
+                [arg1; arg2],
+                _)]) ->
+          let comp = Lambda.swap_integer_comparison comp in
+          transl env (Uprim (Pintcomp comp, [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uconst(Uconst_int 0);
+          Uprim(Pccall { prim_name = ("caml_int32_compare"
+                                     | "caml_int32_compare_unboxed"); _ },
+                [arg1; arg2],
+                _)]) ->
+          let comp = Lambda.swap_integer_comparison comp in
+          transl env (Uprim (Pbintcomp (Pint32, comp), [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uconst(Uconst_int 0);
+          Uprim(Pccall { prim_name = ("caml_int64_compare"
+                                     | "caml_int64_compare_unboxed"); _ },
+                [arg1; arg2],
+                _)]) ->
+          let comp = Lambda.swap_integer_comparison comp in
+          transl env (Uprim (Pbintcomp (Pint64, comp), [arg1; arg2], dbg))
+      | (Pintcomp comp,
+         [Uconst(Uconst_int 0);
+          Uprim(Pccall { prim_name = ("caml_nativeint_compare"
+                                     | "caml_nativeint_compare_unboxed"); _ },
+                [arg1; arg2],
+                _)]) ->
+          let comp = Lambda.swap_integer_comparison comp in
+          transl env (Uprim (Pbintcomp (Pnativeint, comp), [arg1; arg2], dbg))
       | (p, [arg]) ->
           transl_prim_1 env p arg dbg
       | (p, [arg1; arg2]) ->
