@@ -80,6 +80,9 @@ Working version
 
 ### Code generation and optimizations:
 
+- #1809: rewrite `compare x y op 0` to `x op y` when values are integers
+  (Xavier Clerc, review by Gabriel Scherer and Vincent Laviron)
+
 - #9876: do not cache the young_limit GC variable in a processor register.
   This affects the ARM64, PowerPC and RISC-V ports, making signal handling
   and minor GC triggers more reliable, at the cost of a small slowdown.
